--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -19,3 +19,11 @@ h3 Search for messages by From: field
 	= text_field_tag :from_address, "jeff.skilling@enron.com"
 	p
 	= submit_tag "Search"
+	
+h3 Search for keywords
+
+= form_tag search_keyword_search_path, method: 'post' do
+	| Search terms: 
+	= text_field_tag :keywords, "", maxlength: 25
+	p
+	= submit_tag "Search"
