tried to create a single-query model for combining the various possible db queries, but was stymied by my inability to run a db query with an interpolated variable string.  now going to try a more brute-force approach.

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -17,15 +17,12 @@ h3 Search for messages by From: field
 = form_tag search_search_results_path, method: 'post' do
 	| From: 
 	= text_field_tag :from_address, "jeff.skilling@enron.com"
-	= hidden_field_tag :type, "from"
 	p
-	= submit_tag "Search"
-	
-h3 Search for keywords
-
-= form_tag search_search_results_path, method: 'post' do
+	| To: 
+	= text_field_tag :to_address, "eric.bass@enron.com"
+	p
 	| Search terms: 
 	= text_field_tag :keywords, "", maxlength: 25
-	= hidden_field_tag :type, "keywords"	
+
 	p
 	= submit_tag "Search"
