whew...got the multi-search working by building a hash instead of a string, duh

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -16,10 +16,10 @@ h3 Search for messages by From: field
 
 = form_tag search_search_results_path, method: 'post' do
 	| From: 
-	= text_field_tag :from_address, "jeff.skilling@enron.com"
+	= text_field_tag :from_address, "eric.bass@enron.com"
 	p
 	| To: 
-	= text_field_tag :to_address, "eric.bass@enron.com"
+	= text_field_tag :to_address, "chance.rabon@enron.com"
 	p
 	| Search terms: 
 	= text_field_tag :keywords, "", maxlength: 25
