--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -12,17 +12,33 @@ p
 
 p
 
-h3 Search for messages by From: field
+h3 Search criteria:
+| All fields are optional.
+p
+table cellpadding=5
+	= form_tag search_search_results_path, method: 'post' do
+		tr
+			td From: 
+			td
+				= text_field_tag :from_address, "", size: 25, maxlength: 40
+		tr	
+			td To: 
+			td
+				= text_field_tag :to_address, "", size: 25, maxlength: 40
+		tr	
+			td Date: 
+			td
+				= text_field_tag :date, "", size: 25, maxlength: 40
 
-= form_tag search_search_results_path, method: 'post' do
-	| From: 
-	= text_field_tag :from_address, "eric.bass@enron.com"
-	p
-	| To: 
-	= text_field_tag :to_address, "chance.rabon@enron.com"
-	p
-	| Search terms: 
-	= text_field_tag :keywords, "", maxlength: 25
 
-	p
-	= submit_tag "Search"
+		tr	
+			td Subject/body: 
+			td
+				= text_field_tag :keywords, "", size: 25, maxlength: 40 
+			td
+				i 
+					| (full text search)
+
+		tr
+			td
+				= submit_tag "Search"
