--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -20,7 +20,8 @@ table cellpadding=5
 		tr
 			td From: 
 			td
-				= text_field_tag :from_address, "", size: 25, maxlength: 40
+				.ui-widget
+					= text_field_tag :from_address, "", size: 25, maxlength: 40
 		tr	
 			td To: 
 			td
