--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -21,11 +21,12 @@ table cellpadding=5
 			td From: 
 			td
 				.ui-widget
-					= text_field_tag :from_address, "", size: 25, maxlength: 40
+					= text_field_tag :from_address, "", size: 35, maxlength: 40
 		tr	
 			td To: 
 			td
-				= text_field_tag :to_address, "", size: 25, maxlength: 40
+				.ui_widget
+					= text_field_tag :to_address, "", size: 35, maxlength: 40
 		tr	
 			td Date: 
 			td
