--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,9 +1,7 @@
 body {
-	margin: 20px;
-}
-
-.message {
-	width: 80%;
+	margin: 30px;
+	max-width: 80%;
+	font-family: avenir, helvetica;
 }
 
 pre {
@@ -13,3 +11,41 @@ pre {
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+li {
+	padding: 3px;
+}
+
+.message {
+	width: 80%;
+}
+
+.headline {
+	font-size: 38pt;
+	font-family: courier;
+}
+
+.subj_index, .page_nav, .contact a {
+	text-decoration: none;
+	color: darkblue;
+}
+
+a, a:visited {
+	color: darkblue;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+.spacer {
+	margin-left: 10px;
+	margin-right: 10px;
+	display: inline;
+}
+
+.contact {
+	padding-top: 15px;
+	font-size: 11pt;
+}
+
