--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,5 +1,6 @@
 .headline
 	|Enron email browser
+	= image_tag 'email_icon.png'
 
 p 
 | This app allows users to view and search a subset of the Enron email collection which first appeared online in 2003 (details can be found 
