--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -36,7 +36,7 @@ table cellpadding=5
 					| Show user stats: 
 					= radio_button_tag :show_stats, "On"
 					| On
-					= radio_button_tag :show_stats, "Off", :checked => true
+					= radio_button_tag :show_stats, "Off", checked: true
 					| Off
 		tr
 			td From: 
